feat(auth): disallow to sign up based on config
