# packages/backend/openapi.json
@@ -34,6 +34,9 @@
                             }
                         }
                     },
+                    "405": {
+                        "description": "Signup is disabled"
+                    },
                     "422": {
                         "description": "Validation Error",
                         "content": {
@@ -758,6 +761,24 @@
                     }
                 }
             }
+        },
+        "/config": {
+            "get": {
+                "summary": "Get Config",
+                "operationId": "get_config",
+                "responses": {
+                    "200": {
+                        "description": "Successful Response",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "$ref": "#/components/schemas/ConfigResponse"
+                                }
+                            }
+                        }
+                    }
+                }
+            }
         }
     },
     "components": {
@@ -779,6 +800,27 @@
                     "token"
                 ],
                 "title": "AccessToken"
+            },
+            "AuthConfig": {
+                "properties": {
+                    "allow_signup": {
+                        "type": "boolean",
+                        "title": "Allow Signup"
+                    },
+                    "providers": {
+                        "items": {
+                            "type": "string"
+                        },
+                        "type": "array",
+                        "title": "Providers"
+                    }
+                },
+                "type": "object",
+                "required": [
+                    "allow_signup",
+                    "providers"
+                ],
+                "title": "AuthConfig"
             },
             "Chat": {
                 "properties": {
@@ -867,6 +909,28 @@
                     "assistant"
                 ],
                 "title": "ChatMessageRole"
+            },
+            "ConfigResponse": {
+                "properties": {
+                    "name": {
+                        "type": "string",
+                        "title": "Name",
+                        "default": "Wallstr"
+                    },
+                    "version": {
+                        "type": "string",
+                        "title": "Version"
+                    },
+                    "auth": {
+                        "$ref": "#/components/schemas/AuthConfig"
+                    }
+                },
+                "type": "object",
+                "required": [
+                    "version",
+                    "auth"
+                ],
+                "title": "ConfigResponse"
             },
             "Document": {
                 "properties": {
